# pygui

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md  app.py  app_venv.py  build.bat  code_creator.py  function_template.h  helpers.py  model_creator.py  pyproject.toml  pyx_parser.py  requirements.txt  setup.py  template_merger.py  test.py
legacy/: core_manually_made.pyi
pygui/: __init__.py  __init__.pyi  ccimgui.pxd  ccimgui_enums.pxd  ccimgui_enums_manually_made.pxd  ccimgui_manually_made.pxd  ccimgui_v1.pxd  ccimgui_v2.pxd  cimgui.h  cimgui_flat.h  cimgui_test.h  core.pyi  core.pyx  core_generated.pyx  core_manually_made.pyx  core_template.pyx  core_test.pyx  core_text.pyi  core_v1.pyx  core_v2.pyx  core_v2_attempt.pyx  core_v2_template.pyx  function_template.h
pygui/integrations/: __init__.py  base.py  glfw.py  opengl.py
pygui/pygui/: core.cp310-win_amd64.pyd
pygui/templates/: classes.h  fields.h  functions.h
src/: app.py  config.json  config.py  db_main.c  dear_bindings_model.py  dear_parser.py  dear_setup.py  glfw_opengl_bindings.py  helpers.py  impl.py  main.c  main.cpp  main_old.c  model_creator.py  portable.py  pygui_demo.py  python_demo_window.py  pyx_parser.py  setup.py
src/binding/: constants.py  pyx_parser.py
src/binding/core/: ccimgui.pxd  core.pyx  core_generated.pyx  core_template.pyx  dcimgui.pxd
src/binding/model/: template.py
src/binding/model/dear_bindings/: argument.py  binding.py  interfaces.py  struct.py
src/binding/model/dear_bindings/templates/: class.h  field.h  function.pyi
src/c/: README.md  main.c  main.cpp
src/c/cpp_config/: custom_python_error.cpp  custom_python_error.h  imgui_config.h  imgui_config_export_dll.h  imgui_config_import_dll.h  pygui_config.cpp
src/core/: ccimgui.pxd  ccimgui_db.pxd  ccimgui_dear_bindings.pxd  ccimgui_dear_bindings_impl.pxd  ccimgui_glfw.pxd  ccimgui_old.pxd  ccimgui_opengl3.pxd  cimgui.h  cimgui.lib  core.cpp  core.pyx  core_db.cpp  core_db.pyx  core_generated.pyx  core_generated_db.pyx  core_generated_dear_bindings.pyx  core_generated_dear_bindings_impl.pyx  core_generated_dear_bindings_template.pyx  core_generated_edited_bkp.pyx  core_generated_old.pyx  core_generated_prev.pyx  core_generated_trial_old.pyx  core_template.pyx  core_template_db.pyx  core_template_old.pyx  core_template_trial.pyx  core_trial.pyx  glfw_impl.cpp  glfw_impl.pyx  opengl3_impl.cpp  opengl3_impl.pyx
src/core/backends/: glfw.json  imgui_impl_glfw.h  imgui_impl_opengl3.h  opengl3.json
src/core/backends/core/: config.json  core_generated_db.pyx  core_template_db.pyx
src/core/backends/glfw/: config.json  glfw_impl.json  glfw_impl_generated.pyx  glfw_impl_template.pyx
src/core/backends/opengl3/: config.json  opengl3_impl_generated.pyx  opengl3_impl_template.pyx
src/core/templates/: class.h  class.pyi  class_db.h  field.h  field.pyi  field_db.h  function.h  function.pyi  init.py
src/cpp_config/: imconfig.h  pygui_config.cpp  pygui_config.h
src/deploy/: app.py  pygui_demo.py
src/deploy/pygui/: __init__.pyi  pygui_demo.py
src/deploy/pygui_cython/: __init__.py  __init__.pyi  pygui_demo.py
src/model/: comments.py
src/model/dear_bindings/: __init__.py  argument.py  binding.py  db_type.py  enum.py  function.py  interfaces.py  struct.py  typedef.py
src/model/parsed/: interfaces.py
src/model/parsed/dear_bindings/: argument.py  binding.py  db_type.py  enum.py  function.py  struct.py  typedef.py
src/pygui/: __init__.py  __init__.pyi  __init__db.py  __init__db.pyi  __init__old.pyi  cimgui.h  core.pyx  core_generated.pyx
src/pygui/integrations/: base.py  glfw.py  opengl.py
src/pygui/templates/: fields.h  functions.h
