[build-system]
requires = [
  "scikit-build-core>=0.12",
  "cython>=3.0",
  "cython-cmake>=0.2"
]
build-backend = "scikit_build_core.build"

[project]
name = "pygui"
version = "1.92.6.2"
requires-python = ">=3.12"
description = "Dear Imgui in Python by JaedanC"
# (add your metadata: description, authors, classifiers, etc.)

[tool.scikit-build]
# Where your Python package(s) live:
wheel.packages = ["src/binding/core"]
# CMake is run automatically when building wheels (default true),
# but shown here for clarity:
wheel.cmake = true
cmake.build-type = "Release"
cmake.verbose = true
build-dir = "out/scikit-build" # To allow for caching

# Helpful during development; editable installs are supported (with caveats):
editable.mode = "redirect"
# editable.rebuild = true  # uncomment to auto-rebuild on import in dev