[build-system]
requires = [
  "scikit-build-core>=0.12",
  "cython>=3.0",
  "cython-cmake>=0.2"
]
build-backend = "scikit_build_core.build"

[project]
name = "pygui_cython"
description = "Dear ImGui in Python! A dynamically generated Cython wrapper of dear_bindings"
version = "1.92.6.2"
requires-python = ">=3.12"
authors = [
  { name="JaedanC" },
]
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
  "Cython==3.0.6",
  "diff-match-patch",
  "glfw",
  "numpy",
  "Pillow",
  "ply",
  "PyOpenGL",
  "scikit-build",
  "setuptools",
]

[project.urls]
Repository = "https://github.com/JaedanC/pygui.git"
Changelog = "https://github.com/JaedanC/pygui/releases"

[tool.scikit-build]
wheel.packages = ["src/binding/core"]
wheel.cmake = true
cmake.build-type = "Release"
build.verbose = true
build-dir = "out/scikit-build" # To allow for caching
editable.mode = "redirect"
sdist.include = [
  "CMakeLists.txt",
  "src/binding/core/core.pyx",
  "src/binding/core/dcimgui.pxd",
  "src/c/**",
  "src/external/dear_bindings/generated/**",
  "src/external/glfw/**",
  "src/external/imgui/**.cpp",
  "src/external/imgui/**.h",
  "src/deploy/app.py",
  "src/deploy/assets/**",
  "src/deploy/pygui_cython/pygui_demo.py",
]
